src/Xbim.Geometry.Engine.Native/include/xbim_geometry_api.h

typedef struct XbimContext_*                XbimContextHandle;
typedef struct XbimShape_*                  XbimShapeHandle;
typedef struct XbimLocation_*               XbimLocationHandle;
typedef struct XbimCurve_*                  XbimCurveHandle;
typedef struct XbimCurve2d_*                XbimCurve2dHandle;
typedef struct XbimSurface_*                XbimSurfaceHandle;
typedef struct XbimAdvancedBrepBuilder_*    XbimAdvancedBrepBuilderHandle;
typedef int XbimResult;
/*
 * Destroy a context handle and free its resources.
 * Passing NULL is a safe no-op.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_context_destroy(XbimContextHandle handle);
/*
 * Destroy a shape handle and free its resources.
 * Passing NULL is a safe no-op.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_destroy(XbimShapeHandle handle);
/*
 * Destroy a location handle and free its resources.
 * Passing NULL is a safe no-op.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_destroy(XbimLocationHandle handle);
/*
 * Destroy a curve handle and free its resources.
 * Passing NULL is a safe no-op.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_destroy(XbimCurveHandle handle);
/*
 * Destroy a surface handle and free its resources.
 * Passing NULL is a safe no-op.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_destroy(XbimSurfaceHandle handle);
/*
 * Destroy a 2D curve handle and free its resources.
 * Passing NULL is a safe no-op.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_destroy(XbimCurve2dHandle handle);
/*
 * Destroy an advanced BRep builder, releasing all internal state.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_destroy(
    XbimAdvancedBrepBuilderHandle builder);